@@ -34,6 +34,7 @@
 - Bugfix: Code generation respects the scope analysis.
 - Bugfix: The method analysis is now displayes the default parameter
   values correctly (or at all).
+- Bugfix: No more getter analysis for internal php classes.
 
 2.2.0
 - Added more search pattern and source code parsing to the
